2004-12-12  Dan Dennedy <dan@dennedy.org>
	* *_x86_64.S: apply patch from Dean Kolosiek to fix linker
	  compatibility.
	
2004-11-29  Charles "Buck" Krasic  <krasic@acm.org>
	* libdv 0.104 release

2004-11-29  Dan Dennedy <dan@dennedy.org>
	* libdv.pc: added -lm to make build more portable.

2004-10-19  Dan Dennedy <dan@dennedy.org>
	* applied x86-64 patch from Dean Kolosiek.

2004-07-14  Charles "Buck" Krasic  <krasic@acm.org>

	* libdv 0.103 release
	* update README to note that "bootstrap" is now obolete in light of
	  autoreconf provided by autotools.
	* some updates to the build files resulting due to changes in
	  newer versions of autotools.
	* the goal is that one could build libdv from a distribution
	  tarball or even from CVS without autotools installed (one should
	  just need make and gcc).

2004-07-13  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.h, dv_types.h, headers.c, encode.c: use inttypes.h instead of
	  stdint.h as it is more universal.
	* libdv/dv_types.h: remove unused static variables
	* libdv/dv1394.h: removed

2004-07-06  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.c: fix SMPTE314M typo in dv_format_wide()

2004-07-05  Dan Dennedy <dan@dennedy.org>
	* libdv/encode.c: apply patch from Johannes Sixt to make encoder thread-safe
	  by mutex locks.
	* added libdv/enctest.c to test thread-safetiness of encoder (also from
	  Johannes Sixt).
	* libdv/enc_input.c: make ppm reader more compatible (specifically y4m2ppm).

2004-06-10  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.c: apply patch from Johannes Sixt to fix race condition and bug
	  using deallocated memory.

2004-05-29  Dan Dennedy <dan@dennedy.org>
	* configure.ac, libdv.pc.in: remove gtk from libdv pkg-config dependencies
	  as the core lib has not required glib for some time now!
	* encodedv/dvconnect.c: disable paging for dvconnect's internal buffers
	  (patch from Daniel Kobras)

2004-05-13  Dan Dennedy <dan@dennedy.org>
	* libdv/dv.c: add another IEC widescreen code to dv_format_wide().
