@@ -59,7 +59,7 @@ typedef	union {
 
 /*	Function to test if multimedia instructions are supported...
 */
-inline extern int
+inline static int
 mm_support(void)
 {
 	/* Returns 1 if MMX instructions are supported,
@@ -223,7 +223,7 @@ mm_support(void)
 
 /*	Function to test if mmx instructions are supported...
 */
-inline extern int
+inline static int
 mmx_ok(void)
 {
 	/* Returns 1 if MMX instructions are supported, 0 otherwise */
