@@ -1,3 +1,7 @@
+2004-12-20  Dan Dennedy <dan@dennedy.org>
+	* vlc.h, mmx.h: apply patch from Daniel Kobras to improve
+	  compile compatibillity by making extern inlinei, static inline..
+
 2004-12-12  Dan Dennedy <dan@dennedy.org>
 	* *_x86_64.S: apply patch from Dean Kolosiek to fix linker
 	  compatibility.
